--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -47,6 +47,16 @@
       height: 150px;
     }
   }
+  // about page
+  .about-info {
+    grid-template-areas:
+      "bioimage"
+      "bio"
+      "job1"
+      "job2";
+
+    grid-template-columns: 1fr;
+  }
 }
 
 //Smartphones
