--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -17,15 +17,26 @@ $background-opacity: 0.9;
       // pseudo element
       &:after {
         content: "";
-        position: absolute; // cover the whole body
+        position: fixed; // cover the whole body better to use fixed than absolute
         top: 0;
         right: 0;
         width: 100%;
         height: 100%;
         z-index: -1;
-        background: rgba($primary-color, $background-opacity); // overlay
+        background: rgba($primary-color, $background-opacity);
+
+        // overlay
       }
     }
+  }
+}
+
+// Set Text Color
+@function set-text-color($color) {
+  @if (lightness($color) > 40) {
+    @return #000;
+  } @else {
+    @return #fff;
   }
 }
 
