--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -1,11 +1,17 @@
 //Widescreen
 
 @include mediaXl {
+  .projects {
+    grid-template-columns: repeat(4, 1fr);
+  }
 }
 
 //Desktop and Laptops
 
 @include mediaLg {
+  .projects {
+    grid-template-columns: repeat(3, 1fr);
+  }
 }
 
 //Tablets & small laptop
@@ -57,6 +63,10 @@
 
     grid-template-columns: 1fr;
   }
+  // work page
+  .projects {
+    grid-template-columns: repeat(2, 1fr);
+  }
 }
 
 //Smartphones
@@ -64,5 +74,9 @@
 @include mediaSm {
   main#home h1 {
     margin-top: 10vh;
+  }
+
+  .projects {
+    grid-template-columns: 1fr;
   }
 }
