--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -1,7 +1,7 @@
 $primary-color: #444;
 $secondary-color: #eece1a;
 $show-home-image: true;
-$home-image: url(../img/background.jpg);
+$home-image: url(../img/priya.jpg);
 $background-opacity: 0.9;
 
 @mixin easeOut {
@@ -12,6 +12,7 @@ $background-opacity: 0.9;
   @if $show-home-image {
     &#bg-img {
       background: $home-image;
+      height: 100%;
       background-attachment: fixed;
       background-size: cover;
       // pseudo element
